# pycrossword

./: .gitignore  CMakeLists.txt  README.md  crossword.py
cwgui/: __init__.py  schemi.csv  schemi.yaml  vec.py
dict/: eng  ita  ita2  itaing  iw  retro
pycrossword/: CMakeLists.txt  abstractnode.cpp  abstractnode.h  algo.cpp  algo.h  cwexception.h  decision.cpp  decision.h  definition.cpp  definition.h  dict.cpp  dict.h  func.cpp  func.h  grid.cpp  grid.h  ndict.cpp  ndict.h  params.cpp  params.h  pycrossword.cpp  rand.cpp  rand.h  randomrootnode.cpp  randomrootnode.h  setup.py.in  singleton.h  treenode.cpp  treenode.h
qt/01a/: cw2.py
qt/02/: button_holder.py  main.py
qt/03/: button_holder.py  main.py
qt/04/: main.py  rockwidget.py
qt/05/: main.py  mainwindow.py
qt/06/: main.py  messagebox.py
qt/07/: main.py  painter.py
qt/c64/: 1  2  33  c64_tokenizer.py  ciao  main.py  mainwindow.py  speccy_tokenizer.py  systeminfo.py  token.yaml  tokenizer.py  unittest.py  untitled
qt/c64/progs/: aeroporto.tap  gotcha.prg
qt/c64/systems/c64/: main.yaml  token.yaml
qt/c64/systems/zx-spectrum/: main.yaml  token.yaml
qt/cw/: conf.py  config.yaml  crossword.py  gamewindow.py  gridselect.py  m1.py
